feature/add-nfe-and-nfce-service

--- a/GeradorDanfe/src/GeradorDanfe.App/GeradorDanfe.App.csproj
+++ b/GeradorDanfe/src/GeradorDanfe.App/GeradorDanfe.App.csproj
@@ -6,4 +6,9 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Zeus.Net.NFe.Danfe.PdfClown" Version="2026.2.5.1303" />
+    <PackageReference Include="Zeus.Net.NFe.Danfe.QuestPdf" Version="2026.2.5.1303" />
+  </ItemGroup>
+
 </Project>
