feature/add-dink-to-pdf

--- a/src/GeradorDanfe.App/GeradorDanfe.App.csproj
+++ b/src/GeradorDanfe.App/GeradorDanfe.App.csproj
@@ -7,8 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="PuppeteerSharp" Version="21.1.0" />
+    <PackageReference Include="DinkToPdf" Version="1.0.8" />
     <PackageReference Include="Zeus.Net.NFe.Danfe.Html" Version="2026.2.5.1303" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Lib\libwkhtmltox.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
