feature/add-application-layer

--- a/src/GeradorDanfe.App/GeradorDanfe.App.csproj
+++ b/src/GeradorDanfe.App/GeradorDanfe.App.csproj
@@ -12,6 +12,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\GeradorDanfe.Application\GeradorDanfe.Application.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Update="Lib\libwkhtmltox.dll">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
