--- a/src/GeradorDanfe.App/Properties/launchSettings.json
+++ b/src/GeradorDanfe.App/Properties/launchSettings.json
@@ -21,7 +21,7 @@
     "https": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "applicationUrl": "https://localhost:7157;http://localhost:5294",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
