--- a/src/GeradorDanfe.Web/GeradorDanfe.Web.csproj
+++ b/src/GeradorDanfe.Web/GeradorDanfe.Web.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
@@ -12,11 +12,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\GeradorDanfe.Application\GeradorDanfe.Application.csproj" />
+    <ProjectReference Include="..\GeradorDanfe.Application\GeradorDanfe.Application.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="Lib\libwkhtmltox.dll">
+    <None Update="lib\libwkhtmltox.dll">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
